Adiciona postgres & migrations

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,10 @@
 connexion==2.9.0
 Flask==1.1.4
+
+# Database Connection
+psycopg2-binary==2.9.1
+Flask-SQLAlchemy==2.5.1
+
+# Database Migration
+alembic==1.6.5
+Flask-Migrate==2.7.0
