--- a/.env.test
+++ b/.env.test
@@ -1,9 +1,9 @@
 FLASK_APP=hackernews.app
-FLASK_ENV=testing
+FLASK_ENV=development
 
 POSTGRES_USER=hnews
-POSTGRES_PASSWORD=hnews
-POSTGRES_DB=hnews_dbtest
+POSTGRES_PASSWORD=hnewspwd
+POSTGRES_DB=hnewsdbtest
 POSTGRES_HOST=localhost
 DATABASE_PORT=54321
 DATABASE_URI=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${DATABASE_PORT}/${POSTGRES_DB}
