--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,10 @@
 {
     "python.formatting.provider": "black",
-    "python.pythonPath": "${env:HOME}/.ve/hackernews/bin/python"
+    "python.pythonPath": "/usr/bin/python3",
+    "editor.formatOnSave": true,
+    "python.testing.pytestArgs": [
+        "tests"
+    ],
+    "python.testing.unittestEnabled": false,
+    "python.testing.pytestEnabled": true
 }
