--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -11,9 +11,10 @@ pylint-flask-sqlalchemy==0.2.0
 pylint-plugin-utils==0.6
 
 # Tests
-pytest==6.2.4
-pytest-flask==1.2.0
+pytest==6.1.2
+pytest-flask==1.1.0
 pytest-dotenv==0.5.2
+pytest-mock==3.5.1
 mock==4.0.3
 
 # Devs
