--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,67 @@
 # Flask & API
-Flask==1.1.4
-connexion[swagger-ui]==2.9.0
-Flask-Cors==3.0.10
-
-# Database Connection
-psycopg2-binary==2.9.1
-
-# Database ORM
-Flask-SQLAlchemy==2.5.1
-
-# Database Migration
 alembic==1.6.5
+appdirs==1.4.4
+astroid==2.5
+attrs==21.2.0
+backcall==0.2.0
+certifi==2021.10.8
+charset-normalizer==2.0.7
+click==7.1.2
+clickclick==20.10.2
+connexion[swagger-ui]==2.9.0
+decorator==5.1.0
+Flask==1.1.4
+Flask-Cors==3.0.10
 Flask-Migrate==2.7.0
+flask-shell-ipython==0.4.1
+Flask-SQLAlchemy==2.5.1
+greenlet==1.1.2
+idna==3.3
+inflection==0.5.1
+iniconfig==1.1.1
+isodate==0.6.0
+isort==5.10.1
+itsdangerous==1.1.0
+jedi==0.18.0
+Jinja2==2.11.3
+jsonschema==3.2.0
+lazy-object-proxy==1.6.0
+Mako==1.1.5
+MarkupSafe==2.0.1
+matplotlib-inline==0.1.3
+mccabe==0.6.1
+mypy-extensions==0.4.3
+openapi-schema-validator==0.1.5
+openapi-spec-validator==0.3.1
+packaging==21.2
+parso==0.8.2
+pathspec==0.9.0
+pexpect==4.8.0
+pickleshare==0.7.5
+pkg_resources==0.0.0
+pluggy==0.13.1
+prompt-toolkit==3.0.22
+psycopg2-binary==2.9.1
+ptyprocess==0.7.0
+py==1.11.0
+Pygments==2.10.0
+pyparsing==2.4.7
+pyrsistent==0.18.0
+python-dateutil==2.8.2
+python-dotenv==0.19.0
+python-editor==1.0.4
+PyYAML==5.4.1
+regex==2021.11.10
+requests==2.26.0
+six==1.16.0
+SQLAlchemy==1.4.26
+swagger-ui-bundle==0.0.9
+toml==0.10.2
+tomli==1.2.2
+traitlets==5.1.1
+urllib3==1.26.7
+wcwidth==0.2.5
+wrapt==1.12.1
 
 # Heroku deploy
 gunicorn==20.1.0
