--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -53,3 +53,29 @@ jobs:
           FLASK_APP: hackernews.app
           FLASK_ENV: development
           DATABASE_URI: postgresql://postgres:hn123@localhost:5432/hn_test
+
+      - name: Set up Docker Builder
+        uses: docker/setup-buildx-action@v1
+
+      - name: Log into GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.CR_PAT }}
+
+      - name: Extract branch name
+        shell: bash
+        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+        id: extract_branch
+
+      # Push to Github Container Registry
+      - name: Push to Github Container Registry
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          version: ${{ steps.extract_branch.outputs.branch }}
+          file: Dockerfile
+          target: production
+          push: true
+          tags: "ghcr.io/${{ github.repository }}:${{ steps.extract_branch.outputs.branch }}"
