--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,32 +1,26 @@
 [uwsgi]
-module              = wsgi:app
+module = wsgi:app
 
-master              = true
-# process = 4
-processes           = 4
+master = true
+process = 4
 
-socket              = /tmp/hackernews.sock
-vacuum              = true
+socket = /tmp/hackernews.sock
+chmod-socket = 666
+vacuum = true
 
 # Remove this protocol
 # by default, uWSGI speaks using the uwsgi protocol, 
 # a fast binary protocol designed to communicate with nginx
 #protocol = http
 
-# plugins = python,router_basicauth
-# threads = 2
-# http-socket = :5000
+#plugins = python,router_basicauth
+#threads = 2
+#http-socket = :5000
 
-# die-on-term = true
-
-# http                = :5000
-stats               = :9000
-daemonize           = /tmp/hackernews-uwsgi.log
-post-buffering      = 1
-buffer-size         = 32768
-touch-reload        = true
+die-on-term = true
+post-buffering = 1
+buffer-size = 32768
 reload-on-exception = true
 max-worker-lifetime = 43200
-max-requests        = 10000
-reload-mercy        = 60
-enable-threads      = true
+max-requests = 10000
+reload-mercy = 60
