Mais tentativa de pegar o SHA do commit

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -62,7 +62,8 @@ jobs:
 
       - name: Build
         run: |
-          docker build --build-arg GIT_HASH="${GITHUB_REF#refs/heads/}.${GITHUB_SHA}" .
+          echo "Creating image $GITHUB_SHA"
+          docker build --build-arg GIT_HASH="$GITHUB_SHA" .
 
       - name: Log into GitHub Container Registry
         uses: docker/login-action@v1
