--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -56,14 +56,6 @@ jobs:
 
       - name: Set up Docker Builder
         uses: docker/setup-buildx-action@v1
-        id: buildx
-        with:
-          install: true
-
-      - name: Build
-        run: |
-          echo "Creating image $GITHUB_SHA"
-          docker build --build-arg GIT_HASH="$GITHUB_SHA" .
 
       - name: Log into GitHub Container Registry
         uses: docker/login-action@v1
@@ -86,4 +78,5 @@ jobs:
           file: Dockerfile
           target: production
           push: true
+          build-args: GIT_HASH="$GITHUB_SHA"
           tags: "ghcr.io/${{ github.repository }}:${{ steps.extract_branch.outputs.branch }}"
